# cpp-sfml-rts-game

./: CMakeLists.txt
client/: Client.cpp  Client.h  Connection.h  Settings.h  client.cpp
client/screens/: BaseScreen.h
client/screens/connect/: ConnectScreen.cpp  ConnectScreen.h
client/screens/game/: GameScreen.cpp  GameScreen.h
client/widgets/: BaseWidget.h  Button.cpp  Button.h  TextInput.cpp  TextInput.h
server/: CommandReceiverSystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjectsConfigCreator.cpp  GameObjectsConfigCreator.h  GameSystem.h  Player.cpp  Player.h  gameobjectsconfig.json  server_main.cpp
server/components/: AttackOrder.cpp  AttackOrder.h  BaseComponent.h  BelongingComponent.cpp  BelongingComponent.h  CloneableBaseComponent.h  ComponentArgs.cpp  ComponentArgs.h  ComponentFactory.h  CoordinateComponent.cpp  CoordinateComponent.h  DamageComponent.cpp  DamageComponent.h  HPComponent.cpp  HPComponent.h  MoveOrder.cpp  MoveOrder.h  PlayerBelongingComponent.cpp  PlayerBelongingComponent.h  SizeComponent.cpp  SizeComponent.h
server/json/: nlohmann_jsonTargets.cmake
server/json/single_include/nlohmann/: json.hpp
server/systems/: CommandReceiverSystem.cpp  CommandReceiverSystem.h  GameSystem.cpp  GameSystem.h  MoveSystem.cpp  MoveSystem.h
shared/util/: GameCommand.h  MultithreadQueue.h  MultithreadQueue_impl.h  util.h
